--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,6 +15,10 @@ jobs:
        run: |
         npm i
         npm run build
+     - uses: actions/upload-artifacts@main
+       with:
+          name: webpack artifacts
+          path: public/
   
   test:
     runs-on: ubuntu-latest
